# RM2027

./: CLAUDE.md  CMakeLists.txt  arm-gcc-toolchain.cmake
CMake/config/: pyro_robot_id_config.cmake
CubeMX/: CubeMX.ioc
CubeMX/Core/Inc/: FreeRTOSConfig.h
CubeMX/Core/Src/: freertos.c  main.c  usart.c
PYRo/: CMakeLists.txt
PYRo/Algorithm/Common/: pyro_algo_common.cpp  pyro_algo_common.h
PYRo/Algorithm/Kinematics/: pyro_kin_rudomni.cpp  pyro_kin_rudomni.h
PYRo/Algorithm/LESO/: pyro_algo_leso.cpp  pyro_algo_leso.h
PYRo/Communication/: pyro_com_cantx.h
PYRo/Component/INS/: pyro_ins.cpp
PYRo/Component/Image/: pyro_image_drv.cpp
PYRo/Component/Motor/: pyro_dji_motor_drv.cpp  pyro_dm_motor_drv.cpp
PYRo/Component/Navigation/: pyro_nav_hub.cpp  pyro_nav_hub.h
PYRo/Component/Powercontrol/: pyro_power_control.cpp  pyro_power_control.h  pyro_power_control_drv.cpp  pyro_power_control_drv.h
PYRo/Component/RC/: pyro_rc_base_drv.cpp
PYRo/Component/Referee/: protocol.h  pyro_referee.cpp
PYRo/Component/SR/: pyro_us100_drv.cpp
PYRo/Device/BMI088/: BMI088_driver.h
PYRo/Module/: pyro_module_base.h  pyro_module_base.tpp
Robot/Hero/: CMakeLists.txt  config.h  pyro_init_thread.cpp  pyro_mission_planer.cpp
Robot/Sub_Hero/: CMakeLists.txt  config.h
Robot/Target_Robot/: CMakeLists.txt  config.h  pyro_init_thread.cpp  pyro_mission_planer.cpp
Robot/Target_Robot/Application/: pyro_chassis_app.cpp
Robot/Target_Robot/Chassis/: pyro_target_robot.cpp  pyro_target_robot.h  target_robot_config.h
Robot/Target_Robot/Chassis/fsm/: pyro_target_active_state.cpp  pyro_target_passive_state.cpp
(+83 files in other folders)
